build title reuse and about frame

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,9 +12,10 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #CF9C63;
-$secondary : #232222;
-$accent    : #444444;
-$text      : #ffffff;
-
-$button      : #2d2a2a;
+$primary: #cf9c63;
+$secondary: #232222;
+$accent: #444444;
+$text: #ffffff;
+$divider: #111111;
+$button: #2d2a2a;
+$primaryGradient: linear-gradient(90deg, rgba(207, 156, 99, 1) 0%, rgba(255, 255, 255, 1) 100%);
